# Study

s1/: CMakeLists.txt
s1/include/: Application.h  Camera.h  ColorShader.h  D3DRender.h  Input.h  Model.h  System.h
s1/shader/: Color.ps  Color.vs
s1/src/: Application.cpp  ColorShader.cpp  D3DRender.cpp  Input.cpp  Model.cpp  System.cpp  Systen.cpp  main.cpp
s3/: CMakeLists.txt
s3/include/: Application.h  Input.h  System.h
s3/record/: main.cpp2  main.cpp5  main.cpp6  main.cpp7  main.cpp8  main.cpp9  main.cpp_修改文件修改日期
s3/shader/: pixel.shader  point.shader
s3/src/: Application.cpp  Input.cpp  System.cpp  main.cpp  main.cpp1  main.cpp3  main.cpp4
